# JEPA-WORM

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUTONOMOUS_REPORT.md  CHANGELOG.md  CITATION.cff  CITATIONS.bib  LICENSE  NEXT_EXPERIMENTS.md  README.md  REPRODUCE.md  pyproject.toml
.github/workflows/: test.yml
configs/: headline.yaml  headline_baaiworm_off.yaml  headline_neural_off.yaml  jepa_debug.yaml  jepa_debug_e2.yaml  jepa_debug_e3.yaml  jepa_debug_e4.yaml  jepa_debug_e5.yaml  jepa_debug_e6.yaml  jepa_debug_e7.yaml  jepa_debug_e8.yaml  jepa_smoke.yaml  jepa_smoke_50steps.yaml  jepa_smoke_realdata.yaml  smoke.yaml
configs/baselines/: kalman.yaml  kalman_realdata.yaml  pose_tcn.yaml  pose_tcn_realdata.yaml  random_features.yaml  random_features_realdata.yaml  transformer_eigenworms.yaml  transformer_eigenworms_realdata.yaml
data/: SOURCES.md
pre-registration/: PRE-REGISTRATION.md  manifest_template.yaml  neuron_subset.yaml
pre-registration/baseline_features/: tierpsy_pin.yaml
pre-registration/probes/: neural_decoding.py
pre-registration/splits/: wormid_train_eval.yaml
scripts/: __init__.py  check_changelog_frozen.py  check_manifest.py
scripts/dev/: __init__.py  check_ambiguous_unicode.py  fetch_wormid_cohort.py  fetch_zenodo_anchors.py  gui_verdict_dashboard.py  preflight_gpu.py  regenerate_loader_fixtures.py  remote_sweep.sh  smoke_real_video.py  stage_research_logs.py
scripts/dev/gui/: __init__.py  cache.py  data.py  main.py  state.py  theme.py  watcher.py
src/wormjepa/: __init__.py  paths.py
src/wormjepa/baselines/: __init__.py  _components.py  _registry.py  _runner.py  base.py  kalman.py  pose_tcn.py  random_features.py  transformer_eigenworms.py
src/wormjepa/cli/: __init__.py  eval.py  fetch.py  main.py  preregister.py  report.py  run.py  run_ids.py
src/wormjepa/configs/: __init__.py  baseline_config.py  dataset.py  jepa_config.py  migrations.py  models.py
src/wormjepa/data/: __init__.py  composition.py  contract.py  download.py  prefetch.py
src/wormjepa/eval/: __init__.py  ablations.py  bootstrap.py  encoder_cache.py  future_pose.py  gates.py  metrics_schema.py  motif_ari.py  multiple_comparison.py  neural_decoding.py  neuron_subsets.py  orchestrator.py  residualization.py  session_classifier.py  within_state.py
tests/integration/: test_all_baselines.py  test_wormid_loader_real.py  test_wormjepa_eval_ablation_e2e.py  test_wormjepa_eval_e2e.py
tests/smoke/: test_baseline_kalman_smoke.py  test_baselines_realdata.py  test_dev_local_loader.py  test_flavell_loader.py  test_gui_imports.py  test_gui_phase2_imports.py  test_gui_phase3_imports.py  test_jepa_smoke.py  test_jepa_smoke_realdata.py  test_openworm_loader.py  test_run_smoke.py  test_vjepa_frozen_target_integration.py  test_vjepa_loader.py  test_wormbehavior_loader.py
tests/unit/: test_baaiworm_loader.py  test_bootstrap.py  test_canonicalize.py  test_check_ambiguous_unicode.py  test_clip_writer.py  test_configs.py  test_data_contract.py  test_dataset_config.py  test_download.py  test_download_resume.py  test_download_truncation.py  test_encoder.py  test_encoder_cache.py  test_eval_diagnostics.py  test_eval_exp_probes.py  test_eval_gates_and_corrections.py  test_eval_metrics.py  test_flavell_loader.py  test_hardware_file_backed.py  test_hardware_live_camera.py  test_hardware_two_view.py  test_jepa_components.py  test_jepa_training.py  test_kalman.py  test_loader_sample_counts.py  test_lock.py  test_lock_check.py  test_metrics_schema.py  test_openworm_loader.py  test_paths.py  test_pose_tcn.py  test_prefetch_loader.py  test_preregister_diff.py  test_random_features.py  test_report_cli.py  test_reporting.py  test_results_writer.py  test_run_ids.py  test_status_merge_snapshot.py  test_status_writer_additive.py  (+4 more)
(+72 files in other folders)
